# 3d

./: .gitignore  Cargo.toml  README.md  babylon.html  build-wasm.sh  index.html  roadmap.md
.claude/: settings.local.json
src/: lib.rs
src/animation/: animation_action.rs  animation_clip.rs  animation_mixer.rs  interpolant.rs  keyframe_track.rs  mod.rs
src/camera/: mod.rs  orthographic.rs  perspective.rs
src/controls/: mod.rs  orbit.rs
src/core/: clock.rs  context.rs  engine.rs  id.rs  mod.rs  renderer.rs
src/geometry/: box_geometry.rs  buffer_geometry.rs  cylinder_geometry.rs  mod.rs  plane_geometry.rs  primitives.rs  sphere_geometry.rs  torus_geometry.rs  vertex.rs
src/helpers/: axes_helper.rs  box_helper.rs  grid_helper.rs  mod.rs  transform_gizmo.rs
src/ibl/: irradiance.rs  mod.rs  prefilter.rs
src/illumination/: mod.rs  probe_volume.rs
src/light/: ambient.rs  capsule.rs  directional.rs  disk.rs  hemisphere.rs  mod.rs  point.rs  rect.rs  sphere.rs  spot.rs
src/loaders/: gltf_loader.rs  hdr_loader.rs  loader.rs  loading_manager.rs  mod.rs  obj_loader.rs
src/material/: basic.rs  line.rs  mod.rs  pbr.rs  pbr_lit.rs  pbr_textured.rs  standard.rs
src/math/: box3.rs  color.rs  euler.rs  frustum.rs  line3.rs  matrix3.rs  matrix4.rs  mod.rs  plane.rs  quaternion.rs  ray.rs  raycaster.rs  sphere.rs  triangle.rs  vector2.rs  vector3.rs  vector4.rs
src/nanite/: cluster.rs  culling.rs  gpu_resources.rs  hierarchy.rs  hzb.rs  mod.rs  optimizer.rs  preprocessing.rs  rasterizer.rs  renderer.rs  simplification.rs
src/objects/: instanced_mesh.rs  line.rs  mesh.rs  mod.rs
src/particles/: emitter.rs  forces.rs  gpu_resources.rs  mod.rs  particle.rs  particle_system.rs
src/postprocessing/: effect_composer.rs  mod.rs  pass.rs
src/postprocessing/effects/: mod.rs  (+21 more)
src/scene/: mod.rs  object3d.rs  scene.rs  transform.rs  visibility.rs
src/shaders/: basic.wgsl  line.wgsl  nanite_classify.wgsl  nanite_compact.wgsl  nanite_frustum_cull.wgsl  nanite_hzb_build.wgsl  nanite_material.wgsl  nanite_material_sort.wgsl  nanite_occlusion_cull.wgsl  nanite_shadow.wgsl  nanite_sw_rasterize.wgsl  nanite_two_pass_occlusion.wgsl  nanite_visibility.wgsl  particle_compute.wgsl  particle_render.wgsl  pbr.wgsl  pbr_lit.wgsl  pbr_textured.wgsl  procedural_sky.wgsl  skybox.wgsl  standard.wgsl
src/shadows/: cascade.rs  mod.rs  point_shadow.rs  shadow_config.rs  shadow_map.rs  shadow_pass.rs
src/texture/: brdf_lut.rs  cube_texture.rs  detail_albedo.rs  detail_normal.rs  mod.rs  sampler.rs  texture2d.rs
src/web/: mod.rs
web/: index.html
