[package]
name = "ren"
version = "0.1.0"
edition = "2021"
authors = ["Ren Contributors"]
description = "High-performance WASM/wgpu 3D engine with Nanite-style virtualized geometry and Lumen-style global illumination"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/ren"
keywords = ["wgpu", "wasm", "3d", "graphics", "webgpu"]
categories = ["graphics", "game-engines", "wasm", "rendering"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["web"]
web = ["dep:wasm-bindgen", "dep:web-sys", "dep:js-sys", "dep:console_error_panic_hook", "dep:wasm-bindgen-futures"]
native = []
parallel = ["dep:rayon", "dep:wasm-bindgen-rayon"]
nanite = []
lumen = []

[dependencies]
# Core wgpu
wgpu = { version = "23.0", features = ["webgl"] }

# Math
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1.19", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# Error handling
thiserror = "2.0"

# Model loading
gltf = "1.4"

# Image loading
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# WASM bindings (optional, enabled by default)
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# Parallel processing (optional)
rayon = { version = "1.10", optional = true }
wasm-bindgen-rayon = { version = "1.2", optional = true }

# Web APIs
web-sys = { version = "0.3", optional = true, features = [
    "console",
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "Performance",
    "PerformanceTiming",
    "Navigator",
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
    "GpuQueue",
    "GpuCanvasContext",
    "GpuTexture",
    "GpuTextureView",
    "GpuTextureFormat",
    "GpuCommandEncoder",
    "GpuRenderPassEncoder",
    "GpuRenderPipeline",
    "GpuShaderModule",
    "GpuBuffer",
    "GpuBindGroup",
    "GpuBindGroupLayout",
    "GpuPipelineLayout",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "PointerEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "ResizeObserver",
    "ResizeObserverEntry",
    "DomRectReadOnly",
]}

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
